# mkdocs-cdoc

./: .flake8  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
example/: mkdocs.yml  version.json
example/appendix/: howto-engine_init.md  notes-engine_init.md
example/docs/: api-intro.md  api_ref.md  driver-intro.md  index.md
example/external_lib/: igt_aux.c
example/src/core/: engine.c  engine.h
example/src/drivers/: spi.c  uart.c
example/src/lib/: igt_aux.c  igt_core.c
example/src/tests/: engine_test.c  gem_create.c  kms_addfb.c  kms_atomic.c  kms_properties.c
mkdocs_cdoc/: __init__.py  convert.py  parser.py  plugin.py  renderer.py
tests/: test_cdoc.py
